<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017 Yordan P. Dieguez <ypdieguez@tuta.io>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">CursorRecyclerAdapterSample</string>
    <string name="item_text_sample">Item</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="ok_button">OK Button</string>
    <string name="cancel_button">Cancel button</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Item &#8230;</string>
</resources>
