<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017 Yordan P. Dieguez <ypdieguez@tuta.io>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvName"
        style="@style/AppTheme.AdaptableView"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="20sp"
        android:visibility="visible"
        tools:text="@string/item_text_sample" />

    <EditText
        android:id="@+id/etName"
        style="@style/AppTheme.AdaptableView"
        android:inputType="text"
        android:textSize="20sp"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/ibEdit"
        style="@style/AppTheme.ImageButton"
        android:contentDescription="@string/edit_button"
        app:srcCompat="@drawable/pencil" />

    <ImageButton
        android:id="@+id/ibDelete"
        style="@style/AppTheme.ImageButton"
        android:contentDescription="@string/delete_button"
        app:srcCompat="@drawable/delete" />

    <ImageButton
        android:id="@+id/ibOk"
        style="@style/AppTheme.ImageButton"
        android:contentDescription="@string/ok_button"
        app:srcCompat="@drawable/check" />

    <ImageButton
        android:id="@+id/ibCancel"
        style="@style/AppTheme.ImageButton"
        android:contentDescription="@string/cancel_button"
        app:srcCompat="@drawable/close" />

</LinearLayout>
